--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "testing",
+      "type": "python",
+      "request": "launch",
+      "program": "testing.py",
+      "console": "integratedTerminal"
+    },
+    {
       "name": "demo",
       "type": "python",
       "request": "launch",
