--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,11 @@ jobs:
       - run:
           command: python demo.py
           name: Test
-
+      - run:
+          name: Code Has Arrived
+          command: |
+            ls ./ressources/
+            echo '^^^That should look familiar^^^'
 workflows:
   main:
     jobs:
