test.py should be included in the pipe

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,9 @@ jobs:
             ls ./ressources/
             echo '^^^That should look familiar^^^'
       - run:
-          command: python demo.py
+          command: |
+          python demo.py
+          python test.py
           name: Test
 
 workflows:
